8.chotot_challenge/trial_share_fs/efs_multihost_v2/ingress_basic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: wordpress
    servicePort: 8080
